mdapipkg/unpackaged/objects/Job_Type__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Keep_Jobs__c</fullName>
        <defaultValue>90</defaultValue>
        <label>Days to Keep Jobs</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Job_Run_OK__c</fullName>
        <label>Last Job Run OK</label>
        <summarizedField>Job__c.Finished__c</summarizedField>
        <summaryFilterItems>
            <field>Job__c.Status__c</field>
            <operation>equals</operation>
            <value>Finished</value>
        </summaryFilterItems>
        <summaryForeignKey>Job__c.Job_Type__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Must_Run_Daily__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Jobs for this Job Type must run at least every 24 hours.  This can be used by a  workflow to send an email alert if this does not happen.</description>
        <inlineHelpText>If checked, Jobs for this Job Type must run at least every 24 hours.  This can be used by a  workflow to send an email alert if this does not happen.</inlineHelpText>
        <label>Must Run Daily</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Job Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>